--- a/pyasx/config.yml
+++ b/pyasx/config.yml
@@ -1,7 +1,10 @@
 ---
 
 # Endpoint providing CSV of listed companies and their tickers
-asx_index_csv: https://www.asx.com.au/asx/research/ASXListedCompanies.csv
+asx_companies_csv: https://www.asx.com.au/asx/research/ASXListedCompanies.csv
+
+# Endpoint providing XLS spreadsheet of all listed securities and their tickers
+asx_companies_csv: www.asx.com.au/programs/ISIN.xls
 
 # Endpoint to pull individual companies data
 asx_company_json: https://www.asx.com.au/asx/1/company/%s # %s = ticker
